update prices, email, fix button align

--- a/src/sass/MAIN-SECTIONS/2-main/rooms/_room-slider.sass
+++ b/src/sass/MAIN-SECTIONS/2-main/rooms/_room-slider.sass
@@ -63,6 +63,7 @@
   justify-content: center
   align-content: center
   &:after
+    align-self: center
     content: ''
     width: 24px
     height: 24px
